Migrated from spring rest controller to CXF
