# src/main/java/com/devit/checkmein/api/exception/handler/ApiError.java
@@ -1,17 +1,0 @@
-package com.devit.checkmein.api.exception.handler;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import org.springframework.http.HttpStatus;
-
-/**
- * @author Lucas.Godoy on 13/11/17.
- */
-@Data
-@AllArgsConstructor
-public class ApiError {
-
-	private HttpStatus httpStatus;
-	private String message;
-
-}
